samples/_failures_safe/1761074305_f0f422_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b4aad0d6.c: In function ‘main’:
./samples/SAFE/__tmp_b4aad0d6.c:149:5: error: expected ‘{’ at end of input
  149 |     enum
      |     ^~~~
./samples/SAFE/__tmp_b4aad0d6.c:149:5: error: expected declaration or statement at end of input
